# KeyboardLogic

./: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  Config.cmake  KeyDef.cmake  MatrixKeyboard.ioc  README.md  main.c  stm32f103c8Tx.cfg
Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  universal_func.h
Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Inc/: usbd_customhid.h
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Src/: usbd_customhid.c
USB_Config Backup/202111262023/USB_DEVICE/App/: usbd_custom_hid_if.c  usbd_custom_hid_if.h
USB_DEVICE/App/: usbd_custom_hid_if.c  usbd_custom_hid_if.h
custom_driver/Inc/: KeyScan_Matrix.h  Keyboard_WS2812.h  RGB_WS2812_SPI.h  SerialPrint.h  USB_HID_Receive.h  USB_HID_Send.h  USB_Send.h  USB_receive.h  WS2812_RGB.h  hardware_structure_define.h  matrix_conf.h  matrix_keyboard.h
custom_driver/Src/: KeyScan_Matrix.c  Keyboard_WS2812.c  RGB_WS2812_SPI.c  SerialPrint.c  Serial_Debug.c  USB_HID_Receive.c  USB_HID_Send.c  USB_Send.c  USB_receive.c  WS2812_RGB.c  matrix_conf.c  matrix_keyboard.c
keyboard_logic/Inc/: Keyboard_Bind.h  Keyboard_Keycode_Proccess.h  Keyboard_Physical_Detect.h  Keyboard_Report_Send.h  Keyboard_Task.h
keyboard_logic/Src/: Keyboard_Bind.c  Keyboard_Keycode_Proccess.c  Keyboard_Physical_Detect.c  Keyboard_Report_Send.c  Keyboard_Task.c
universal_func/Inc/: universal_func.h
universal_func/Src/: universal_func.c
